menu and top image for home page

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,1 +1,12 @@
 @import '~bootstrap/scss/bootstrap';
+@import 'top';
+@import 'menu';
+
+body {
+    font-size: 10px;
+    font-family: serif;
+}
+
+.active {
+    color: #E89989!important;
+}
