--- a/app/views/layouts/_header_simple.html.erb
+++ b/app/views/layouts/_header_simple.html.erb
@@ -1,19 +1,30 @@
-   <nav class="navbar navbar-expand-sm navbar-dark bg-dark mt-3 mb-3">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav4" aria-controls="navbarNav4" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="#">Navbar</a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">新規登録</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">データ一覧</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">エクスポート</a>
-                </li>
-            </ul>
+<header class="head">
+  <div class="top-header">
+    <div class="container">
+        <div id="top-menu">
+            <button class="menubtn" type="button" v-bind:class="{ '_state-open': isActive }" v-on:click="open">
+                Menu
+            </button>
+            <transition name="trans_slide">
+                <div id="gnav" class="mnnav" v-if="gnav">
+                    <nav>
+                    <div class="mnnav__body" v-cloak>
+                    aaaaa
+                    bbbb
+                    </div>
+                    </nav>
+                </div><!-- mnnav -->
+            </transition>
         </div>
-    </nav>    
+        <div id="menu-pc">
+            <ul class="nav__lst">
+                <li class="mnnav__item"><%= link_to "Home", root_path, class:action_name == 'home' ? 'active' : '' %></li>
+                <li class="mnnav__item"><%= link_to "Salons", root_path %></li>
+                <li class="mnnav__item"><%= link_to "Services", root_path %></li>
+                <li class="mnnav__item"><%= link_to "Blogs", root_path %></li>
+            </ul><!-- nav__lst -->
+        </div>
+    </div><!-- top-header -->
+  </div><!-- container -->
+  <%= javascript_pack_tag 'menu' %>
+</header><!-- head -->
