--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<section class="top1">
+    <%= image_tag('pages/top1.jpg') %>
+    <div class="c-name">
+        <h1>Sitter Salon</h1>
+        <p>ベビーシッターをサロン感覚で</p>
+    </div>
+</section>
