--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,40 @@
 <section class="top1">
     <%= image_tag('pages/top1.jpg') %>
     <div class="c-name">
-        <h1>Sitter Salon</h1>
-        <p>ベビーシッターをサロン感覚で</p>
+        <div>
+            <h1>Sitter Salon</h1>
+            <p>ベビーシッターをサロン感覚で</p>
+        </div>
+        <div>
+            <h5>My Services</h5>
+        </div>
+    </div>
+</section>
+<section class="top2">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <div class="services">
+                    <div class="container">
+                        <div class="row">
+                            <%= image_tag('logo.png') %>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <button class="btn btn-primary">
+                                Ally Helper Station
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+            One of three columns
+            </div>
+            <div class="col-sm">
+            One of three columns
+            </div>
+        </div>
     </div>
 </section>
